auto prefixed all css added image to gallery what wasn't working

--- a/index.html
+++ b/index.html
@@ -515,10 +515,10 @@
         <div class="gallery container">
             <div id="img1"><img class="image" src="../images/Product 3.jpg" alt=""></div>
             <div id="img2"><img class="image" src="../images/Porject 4.jpg" alt=""></div>
-            <div id="img3"><img class="image" src="../images/Project 1.jpg" alt=""></div>
+            <div id="img3"><img class="image" src="../images/Project-1.jpg" alt=""></div>
             <div id="img4"><img class="image" src="../images/Project 5.jpg" alt=""></div>
             <div id="img5"><img class="image" src="../images/Product 10.jpg" alt=""></div>
-            <div id="img6"><img class="image" src="../images/Project 2.jpg" alt=""></div>
+            <div id="img6"><img class="image" src="../images/project 2.jpg" alt=""></div>
         </div>
         <button class="solid gallery-button"  type="button" onclick="location.href='html/gallery.html'">
             SEE MORE
@@ -714,7 +714,6 @@
 </script>
     
 <script src="app.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
