--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="description">
-    <meta name= "keywords" content="description">
+    <meta name="description" content="Color and Tone Painting offers the best service in Seattle for the best 
+									  price.  We're locally owned and operated We offer FREE ESTIMATES to everyone 
+									  with no obligation to purchase anything.">
+	<meta name="keywords" content="seattle">
 
 
     <!-- Favicons -->
